[metadata]
name = blocksync
version = 1.2.0
description =
    Synchronize files to a destination(local/remote) using a incremental algorithm
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ehdgua01/blocksync
author = ehdgua01
author_email = ehdgua01@gmail.com
license = MIT
license_file = LICENSE
keywords = file synchronize, incremental algorithm
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    paramiko
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.package_data]
blocksync =
    py.typed

[tox:tox]
envlist = py38, py39

[testenv]
commands =
    pip install -r test-requirements.txt
    pytest --cov-report term-missing:skip-covered --cov=blocksync

[flake8]
exclude = venv build
max-line-length = 120
ignore =
    E203,
    E231,
    E701,
    E722,
    W503,
    E501

[tool:pytest]
testpaths = tests
addopts = --disable-socket

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if .debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING
ignore_errors = True
omit =
    venv/*
    tests/*
    setup.py

[mypy]
python_version = 3.8
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
show_error_codes = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
